
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (095) 787-6090

********************************************************************************

  February, 27 2017, 16:52
  deviceServiceVersion = 1013384
	
  [-] Fixed error with getData(FPTR_GD_PRINTER_ID)
  
********************************************************************************

  February, 21 2017, 16:51
  deviceServiceVersion = 1013382
	
  [-] Fixed error with barcode printing
  [-] Fixed error with tax printing
  
********************************************************************************

  February, 17 2017, 21:10
  deviceServiceVersion = 1013380
	
  [-] Fixed discount printing
  
********************************************************************************

  February, 16 2017, 14:10
  deviceServiceVersion = 1013379
	
  [-] Fixed error with parameter FSPrintTags
  
********************************************************************************

  February, 16 2017, 12:30
  deviceServiceVersion = 1013378
	
  [-] Fixed error with writing customer email and phone
  
********************************************************************************

  February, 15 2017, 19:30
  deviceServiceVersion = 1013377
	
  [-] Fixed error with header saving
  [-] Fixed error with additional line between items when 
      using template and parameter ItemRowFormat has spaces at the end
  
********************************************************************************

  February, 14 2017, 23:30
  deviceServiceVersion = 1013376
	
  [-] Fixed error with barcode printing
  [-] Fixed error with voided receipt items
  
********************************************************************************

  February, 14 2017, 15:15
  deviceServiceVersion = 1013375
	
  [-] Fixed error with parameters save
  [-] Fixed error with receipt format
  